--- a/cases.html
+++ b/cases.html
@@ -1,47 +1,38 @@
-<!doctype html>
-<html lang="ja">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>業務AIレシピ集 | 成果事例</title>
-  <link rel="canonical" href="./cases.html" />
-  <meta property="og:title" content="成果事例" />
-  <meta property="og:image" content="assets/img/ogp.png" />
-  <link rel="stylesheet" href="assets/css/base.css" />
-  <link rel="stylesheet" href="assets/css/layout.css" />
-  <link rel="stylesheet" href="assets/css/components.css" />
-  <link rel="stylesheet" href="assets/css/pages.css" />
-</head>
-<body>
-  <a class="skip-link" href="#main">メインへスキップ</a>
-  <header class="site-header">
-    <div class="container nav">
-      <a class="brand" href="./index.html"><span class="logo"></span>業務AIレシピ集</a>
-      <nav aria-label="グローバル" class="nav-links">
-        <ul>
-          <li><a href="./catalog.html">活用カタログ</a></li>
-          <li><a href="./templates.html">テンプレ</a></li>
-          <li><a href="./roi.html">ROI計算</a></li>
-          <li><a aria-current="page" href="./cases.html">事例</a></li>
-        </ul>
-      </nav>
-      
-    </div>
-  </header>
-  <main id="main" class="container">
-    <h1>成果事例</h1>
-    <div class="card-grid">
-      <article class="card reveal"><div><div class="title">営業資料作成</div><p class="muted">ドラフト作成を自動化</p></div><strong>45分 → 10分</strong></article>
-      <article class="card reveal"><div><div class="title">問い合わせ一次回答</div><p class="muted">FAQ参照と要約</p></div><strong>15分 → 4分</strong></article>
-      <article class="card reveal"><div><div class="title">議事録整備</div><p class="muted">箇条書きから構造化</p></div><strong>25分 → 7分</strong></article>
-    </div>
-  </main>
-  <footer class="site-footer">
-    <div class="container">
-      <p>最終更新: <span data-js="last-updated"></span> / <a class="link" href="./policy.html">簡易利用規約</a> / commit: <span data-js="commit-sha">-</span></p>
-      <p>© 業務AIレシピ集</p>
-    </div>
-  </footer>
-  <script type="module" src="assets/js/app.js" defer></script>
-</body>
-</html>
+<!doctype html><html lang="ja"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>事例</title><link rel="stylesheet" href="assets/css/base.css"></head><body>
+<a class="skip" href="#main">本文へスキップ</a>
+<header class="site-header">
+  <div class="wrap bar">
+    <a class="brand" href="index.html">
+      <span class="brand__logo" aria-hidden="true">AI</span>
+      <span class="brand__title">業務AIレシピ集</span>
+    </a>
+    <nav class="nav">
+      <a href="catalog.html">活用カタログ</a>
+      <a href="templates.html">テンプレ集</a>
+      <a href="roi.html">ROI計算</a>
+      <a href="cases.html">事例</a>
+      <a href="blog.html">ブログ</a>
+      <a href="faq.html">FAQ</a>
+      <a href="policy.html">規約</a>
+      <a href="contact.html">相談</a>
+    </nav>
+  </div>
+</header>
+<main id="main">
+  <section class="hero"><div class="wrap hero__inner"><h1 class="hero__title">成果事例</h1><p class="hero__lead">Before→After を短文で。</p></div></section>
+  <section class="section"><div class="wrap grid grid3">
+    <article class="card"><h2>配線ミスの候補を自動特定</h2><p>現場写真→相関図→誤配線候補。出張1回分を回避。</p></article>
+    <article class="card"><h2>見積書OCR→差分検知</h2><p>差し戻しゼロ。確認時間を半分以下に。</p></article>
+    <article class="card"><h2>当日提示のコスト試算</h2><p>入替提案A/Bの月額・回収期間を即算出。</p></article>
+  </div></section>
+</main>
+<footer class="site-foot">
+  <div class="wrap foot__inner">
+    <small>© 業務AIレシピ集</small>
+    <small id="updated"></small>
+  </div>
+</footer>
+<script type="module" src="assets/js/app.js"></script>
+</body></html>
