--- a/index.html
+++ b/index.html
@@ -1,169 +1,49 @@
-<!doctype html>
-<html lang="ja">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>業務AIレシピ集 | トップ</title>
-  <meta name="description" content="普段の業務でAIを活用して効率化するための再現性ある手順・テンプレ・ROIを配布。" />
-  <link rel="canonical" href="./index.html" />
-  <meta property="og:title" content="業務AIレシピ集" />
-  <meta property="og:description" content="再現性ある手順・テンプレ・ROIを配布。" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="assets/img/ogp.png" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <link rel="stylesheet" href="assets/css/base.css" />
-  <link rel="stylesheet" href="assets/css/layout.css" />
-  <link rel="stylesheet" href="assets/css/components.css" />
-  <link rel="stylesheet" href="assets/css/pages.css" />
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "業務AIレシピ集",
-    "url": "./index.html"
-  }
-  </script>
-</head>
-<body>
-  <a class="skip-link" href="#main">メインへスキップ</a>
-  <header class="site-header" role="banner">
-    <div class="container nav">
-      <a class="brand" href="./index.html"><span class="logo" aria-hidden="true"></span>業務AIレシピ集</a>
-      <nav aria-label="グローバル" class="nav-links">
-        <ul>
-          <li><a href="./catalog.html">活用カタログ</a></li>
-          <li><a href="./templates.html">テンプレ</a></li>
-          <li><a href="./roi.html">ROI計算</a></li>
-          <li><a href="./cases.html">事例</a></li>
-          <li><a href="./blog.html">ブログ</a></li>
-          <li><a href="./faq.html">FAQ</a></li>
-          <li><a href="./contact.html">相談</a></li>
-        </ul>
-      </nav>
-      
+<!doctype html><html lang="ja" data-theme="dark"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>業務AIレシピ集 | トップ</title>
+<link rel="stylesheet" href="assets/css/base.css">
+</head><body>
+<a class="skip" href="#main">本文へスキップ</a>
+<header class="site-header">
+  <div class="wrap bar">
+    <a class="brand" href="index.html">
+      <span class="brand__logo" aria-hidden="true">AI</span>
+      <span class="brand__title">業務AIレシピ集</span>
+    </a>
+    <nav class="nav">
+      <a href="catalog.html">活用カタログ</a>
+      <a href="templates.html">テンプレ集</a>
+      <a href="roi.html">ROI計算</a>
+      <a href="cases.html">事例</a>
+      <a href="blog.html">ブログ</a>
+      <a href="faq.html">FAQ</a>
+      <a href="policy.html">規約</a>
+      <a href="contact.html">相談</a>
+    </nav>
+  </div>
+</header>
+<main id="main">
+  <section class="hero"><div class="wrap hero__inner">
+    <img class="hero__img" src="img/top.png" alt="業務AIレシピ集 トップイメージ" loading="eager" decoding="async">
+    <h1 class="hero__title">検索はやめて“訊く”。AIで、毎日を軽くする。</h1>
+    <p class="hero__lead">文章・画像・試算をAIにまかせて、あなたは判断に集中。</p>
+    <div>
+      <a class="btn btn--accent" href="catalog.html">活用カタログを見る</a>
+      <a class="btn btn--ghost" href="roi.html">ROIをざっくり試す</a>
     </div>
-  </header>
+  </div></section>
 
-  <section class="hero" aria-label="紹介">
-    <div class="container">
-      <h1>仕事の“重さ”を軽く。AIで、できることが増える毎日へ。</h1>
-      <p>要約・整形・調査の下ごしらえはAIに任せ、迷いなく進めるための手順とテンプレを配布。負担を減らし、成果に直行します。</p>
-      <div class="hero-media">
-        <img src="./img/top.png" alt="業務AIレシピ集 トップイメージ: 下ごしらえをAIに任せて、価値ある仕事に集中するイメージ" />
-      </div>
-      <div class="actions">
-        <a class="btn primary" href="./catalog.html">活用カタログを見る</a>
-        <a class="btn" href="./roi.html">ROIで効果を見積もる</a>
-      </div>
-    </div>
-  </section>
-
-  <main id="main" class="container" role="main">
-    <section class="section" id="benefits-lite">
-      <h2 class="section__title">AIで、毎日の仕事が少し軽くなる</h2>
-      <div class="grid grid--3">
-        <a class="benefit-card" href="catalog.html" data-reveal>
-          <div class="benefit-card__icon" aria-hidden="true"></div>
-          <h3>時間が戻る</h3>
-          <p class="muted">毎日のこまごまを短縮。空いた時間は本質へ。</p>
-        </a>
-        <a class="benefit-card" href="catalog.html" data-reveal style="transition-delay:80ms">
-          <div class="benefit-card__icon" aria-hidden="true"></div>
-          <h3>迷いが減る</h3>
-          <p class="muted">次に何をするかがすっと決まる。</p>
-        </a>
-        <a class="benefit-card" href="catalog.html" data-reveal style="transition-delay:160ms">
-          <div class="benefit-card__icon" aria-hidden="true"></div>
-          <h3>できることが増える</h3>
-          <p class="muted">文章・画像・試算まで、AIが下支え。</p>
-        </a>
-      </div>
-    </section>
-
-    <section class="section vibes" id="vibes">
-      <h2 class="section__title">こんなシーンで活きる</h2>
-      <div class="grid grid--4">
-        <a class="vibe" href="catalog.html" data-reveal>
-          <h3>文章・メール</h3>
-          <p class="muted">要点だけ書けば、整う。</p>
-          <span class="vibe__arrow" aria-hidden="true">→</span>
-        </a>
-        <a class="vibe" href="catalog.html" data-reveal style="transition-delay:80ms">
-          <h3>画像・現場</h3>
-          <p class="muted">一枚の写真から、気づきが増える。</p>
-          <span class="vibe__arrow" aria-hidden="true">→</span>
-        </a>
-        <a class="vibe" href="catalog.html" data-reveal style="transition-delay:160ms">
-          <h3>提案・試算</h3>
-          <p class="muted">迷わず出せる、数字の下書き。</p>
-          <span class="vibe__arrow" aria-hidden="true">→</span>
-        </a>
-        <a class="vibe" href="catalog.html" data-reveal style="transition-delay:240ms">
-          <h3>販促・出品</h3>
-          <p class="muted">魅力が伝わる、紹介文の型。</p>
-          <span class="vibe__arrow" aria-hidden="true">→</span>
-        </a>
-      </div>
-    </section>
-
-    <section class="section soft-proof" id="soft-proof">
-      <div class="soft-proof__inner" data-reveal>
-        <div class="soft-proof__copy">
-          <h3>はじめてでも、すっと使える</h3>
-          <p class="muted">むずかしい設定は不要。まずは下の3つから。</p>
-          <ul class="chips" role="list">
-            <li class="chip">箇条書き→メール下書き</li>
-            <li class="chip">写真→要点3つ</li>
-            <li class="chip">数字→ざっくり試算</li>
-          </ul>
-        </div>
-        <div class="soft-proof__cta">
-          <a class="btn" href="catalog.html">活用カタログを見る</a>
-          <a class="btn ghost" href="roi.html">ROIをざっくり試す</a>
-        </div>
-      </div>
-    </section>
-    <section aria-labelledby="value-title" class="reveal">
-      <h2 id="value-title">価値訴求</h2>
-      <div class="card-grid values">
-        <div class="card"><div class="title">効率化</div><p class="muted">要約・整形・検索などの下ごしらえを短縮し、作業時間を圧縮。</p></div>
-        <div class="card"><div class="title">負担軽減</div><p class="muted">迷わない手順とテンプレで、毎回ゼロから考える疲れを減らす。</p></div>
-        <div class="card"><div class="title">できること拡張</div><p class="muted">自力では届かなかった速度と品質へ、AIで到達。</p></div>
-      </div>
-    </section>
-
-    <section aria-labelledby="usecase-title" class="reveal" style="margin-top:24px">
-      <h2 id="usecase-title">注目ユースケース</h2>
-      <div class="card-grid" data-js="featured-usecases"></div>
-    </section>
-
-    <section aria-labelledby="tmpl-title" class="reveal" style="margin-top:24px">
-      <h2 id="tmpl-title">人気テンプレ</h2>
-      <div class="card-grid" data-js="popular-templates"></div>
-    </section>
-
-    <section aria-labelledby="snap-title" class="reveal" style="margin-top:24px">
-      <h2 id="snap-title">成果スナップ</h2>
-      <div class="snapshot">
-        <div class="card"><span>提案骨子</span><strong>60分 → 12分</strong></div>
-        <div class="card"><span>メール作成</span><strong>18分 → 6分</strong></div>
-        <div class="card"><span>初動回答</span><strong>15分 → 4分</strong></div>
-      </div>
-    </section>
-
-    <section aria-labelledby="faq-title" class="reveal" style="margin-top:24px">
-      <h2 id="faq-title">FAQ抜粋</h2>
-      <div class="card-grid" data-js="faq-excerpt"></div>
-    </section>
-  </main>
-
-  <footer class="site-footer" role="contentinfo">
-    <div class="container">
-      <p>最終更新: <span data-js="last-updated"></span> / <a class="link" href="./policy.html">簡易利用規約</a> / commit: <span data-js="commit-sha">-</span></p>
-      <p>© 業務AIレシピ集</p>
-    </div>
-  </footer>
-
-  <script type="module" src="assets/js/app.js" defer></script>
-</body>
-</html>
+  <section class="section"><div class="wrap grid grid3">
+    <a class="card" href="catalog.html"><h2>時間が戻る</h2><p>こまごま作業はAIへ。空いた時間は本質へ。</p></a>
+    <a class="card" href="catalog.html"><h2>迷いが減る</h2><p>次の一手と注意点が3行で分かる。</p></a>
+    <a class="card" href="catalog.html"><h2>できることが増える</h2><p>文章・画像・試算まで下支え。</p></a>
+  </div></section>
+</main>
+<footer class="site-foot">
+  <div class="wrap foot__inner">
+    <small>© 業務AIレシピ集</small>
+    <small id="updated"></small>
+  </div>
+</footer>
+<script type="module" src="assets/js/app.js"></script>
+</body></html>
