--- a/roi.html
+++ b/roi.html
@@ -1,82 +1,43 @@
-<!doctype html>
-<html lang="ja">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>業務AIレシピ集 | ROI計算</title>
-  <link rel="canonical" href="./roi.html" />
-  <meta name="description" content="AI活用で削減できる時間・金額を算出。" />
-  <meta property="og:title" content="ROI計算" />
-  <meta property="og:image" content="assets/img/ogp.png" />
-  <link rel="stylesheet" href="assets/css/base.css" />
-  <link rel="stylesheet" href="assets/css/layout.css" />
-  <link rel="stylesheet" href="assets/css/components.css" />
-  <link rel="stylesheet" href="assets/css/pages.css" />
-</head>
-<body>
-  <a class="skip-link" href="#main">メインへスキップ</a>
-  <header class="site-header">
-    <div class="container nav">
-      <a class="brand" href="./index.html"><span class="logo"></span>業務AIレシピ集</a>
-      <nav aria-label="グローバル" class="nav-links">
-        <ul>
-          <li><a href="./catalog.html">活用カタログ</a></li>
-          <li><a href="./templates.html">テンプレ</a></li>
-          <li><a aria-current="page" href="./roi.html">ROI計算</a></li>
-        </ul>
-      </nav>
-      
-    </div>
-  </header>
-  <main id="main" class="container">
-    <h1>ROI計算機</h1>
-    <p class="muted">入力すると月/年の削減時間・金額が即時更新されます。</p>
-    <section class="roi-form">
-      <div class="field">
-        <label for="wage">時給 (円)</label>
-        <input id="wage" data-js="wage" type="number" min="0" value="2500" inputmode="numeric" />
-      </div>
-      <div class="field">
-        <label for="before">1回の所要時間 前 (分)</label>
-        <input id="before" data-js="before" type="number" min="0" value="30" />
-      </div>
-      <div class="field">
-        <label for="after">1回の所要時間 後 (分)</label>
-        <input id="after" data-js="after" type="number" min="0" value="12" />
-      </div>
-      <div class="field">
-        <label for="per-week">週頻度 (回)</label>
-        <input id="per-week" data-js="per-week" type="number" min="0" value="5" />
-      </div>
-      <div class="field">
-        <label for="per-month">月稼働週 (週)</label>
-        <input id="per-month" data-js="per-month" type="number" min="0" value="4" />
-      </div>
-    </section>
-    <section class="roi-output">
-      <div class="card"><div class="title">月間削減時間</div><strong data-js="m-time">-</strong></div>
-      <div class="card"><div class="title">月間削減金額</div><strong data-js="m-cost">-</strong></div>
-      <div class="card"><div class="title">年間削減時間</div><strong data-js="y-time">-</strong></div>
-      <div class="card"><div class="title">年間削減金額</div><strong data-js="y-cost">-</strong></div>
-    </section>
-    <section class="chart-wrap" style="margin-top:16px">
-      <canvas data-js="chart" width="640" height="180" aria-label="Before/After 時間の比較グラフ" role="img"></canvas>
-    </section>
-    <div class="actions" style="margin-top:12px">
-      <button class="btn" data-js="share">URLをコピー</button>
-      <p class="help">1回削減 = 前−後 / 月間削減時間 = 1回削減 × 週頻度 × 月稼働週 / 月間削減金額 = 月間削減時間/60 × 時給 / 年間 = 月間×12</p>
-    </div>
-  </main>
-  <footer class="site-footer">
-    <div class="container">
-      <p>最終更新: <span data-js="last-updated"></span> / <a class="link" href="./policy.html">簡易利用規約</a> / commit: <span data-js="commit-sha">-</span></p>
-      <p>© 業務AIレシピ集</p>
-    </div>
-  </footer>
-  <script type="module">
-    import './assets/js/app.js';
-    import { initROI } from './assets/js/features/roi.js';
-    window.addEventListener('DOMContentLoaded', initROI);
-  </script>
-</body>
-</html>
+<!doctype html><html lang="ja"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>ROI計算</title><link rel="stylesheet" href="assets/css/base.css"></head><body>
+<a class="skip" href="#main">本文へスキップ</a>
+<header class="site-header">
+  <div class="wrap bar">
+    <a class="brand" href="index.html">
+      <span class="brand__logo" aria-hidden="true">AI</span>
+      <span class="brand__title">業務AIレシピ集</span>
+    </a>
+    <nav class="nav">
+      <a href="catalog.html">活用カタログ</a>
+      <a href="templates.html">テンプレ集</a>
+      <a href="roi.html">ROI計算</a>
+      <a href="cases.html">事例</a>
+      <a href="blog.html">ブログ</a>
+      <a href="faq.html">FAQ</a>
+      <a href="policy.html">規約</a>
+      <a href="contact.html">相談</a>
+    </nav>
+  </div>
+</header>
+<main id="main">
+  <section class="hero"><div class="wrap hero__inner"><h1 class="hero__title">ROI計算</h1><p class="hero__lead">時間短縮がいくらの価値か、ざっくり把握。</p></div></section>
+  <section class="section"><div class="wrap">
+    <form class="grid grid4" data-roi>
+      <label>時給（円）<input type="number" name="wage" value="2000" min="0"></label>
+      <label>1回の所要（前, 分）<input type="number" name="before" value="18" min="0"></label>
+      <label>AI後の所要（分）<input type="number" name="after" value="6" min="0"></label>
+      <label>週あたり回数<input type="number" name="perWeek" value="15" min="0"></label>
+      <label>月の稼働週<input type="number" name="perMonth" value="4" min="0"></label>
+      <output data-out style="grid-column:1/-1">—</output>
+    </form>
+  </div></section>
+</main>
+<footer class="site-foot">
+  <div class="wrap foot__inner">
+    <small>© 業務AIレシピ集</small>
+    <small id="updated"></small>
+  </div>
+</footer>
+<script type="module" src="assets/js/app.js"></script>
+</body></html>
