--- a/templates.html
+++ b/templates.html
@@ -1,54 +1,61 @@
-<!doctype html>
-<html lang="ja">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>業務AIレシピ集 | テンプレ集</title>
-  <link rel="canonical" href="./templates.html" />
-  <meta property="og:title" content="テンプレ集" />
-  <meta property="og:image" content="assets/img/ogp.png" />
-  <link rel="stylesheet" href="assets/css/base.css" />
-  <link rel="stylesheet" href="assets/css/layout.css" />
-  <link rel="stylesheet" href="assets/css/components.css" />
-  <link rel="stylesheet" href="assets/css/pages.css" />
-</head>
-<body>
-  <a class="skip-link" href="#main">メインへスキップ</a>
-  <header class="site-header">
-    <div class="container nav">
-      <a class="brand" href="./index.html"><span class="logo"></span>業務AIレシピ集</a>
-      <nav aria-label="グローバル" class="nav-links">
-        <ul>
-          <li><a href="./catalog.html">活用カタログ</a></li>
-          <li><a aria-current="page" href="./templates.html">テンプレ</a></li>
-          <li><a href="./roi.html">ROI計算</a></li>
-          <li><a href="./faq.html">FAQ</a></li>
-        </ul>
-      </nav>
-      
-    </div>
-  </header>
-  <main id="main" class="container">
-    <h1>テンプレ集</h1>
-    <div class="field" style="max-width:320px">
-      <label for="tpl-filter">種類</label>
-      <select id="tpl-filter" data-js="tpl-filter">
-        <option value="">すべて</option>
-        <option>メール</option>
-        <option>提案骨子</option>
-        <option>OCR</option>
-        <option>画像解析</option>
-        <option>相場調査</option>
-      </select>
-    </div>
-    <div class="card-grid" data-js="templates-list"></div>
-  </main>
-  <footer class="site-footer">
-    <div class="container">
-      <p>最終更新: <span data-js="last-updated"></span> / <a class="link" href="./policy.html">簡易利用規約</a> / commit: <span data-js="commit-sha">-</span></p>
-      <p>© 業務AIレシピ集</p>
-    </div>
-  </footer>
-  <script type="module" src="assets/js/app.js" defer></script>
-</body>
-</html>
+<!doctype html><html lang="ja"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>テンプレ集</title><link rel="stylesheet" href="assets/css/base.css"></head><body>
+<a class="skip" href="#main">本文へスキップ</a>
+<header class="site-header">
+  <div class="wrap bar">
+    <a class="brand" href="index.html">
+      <span class="brand__logo" aria-hidden="true">AI</span>
+      <span class="brand__title">業務AIレシピ集</span>
+    </a>
+    <nav class="nav">
+      <a href="catalog.html">活用カタログ</a>
+      <a href="templates.html">テンプレ集</a>
+      <a href="roi.html">ROI計算</a>
+      <a href="cases.html">事例</a>
+      <a href="blog.html">ブログ</a>
+      <a href="faq.html">FAQ</a>
+      <a href="policy.html">規約</a>
+      <a href="contact.html">相談</a>
+    </nav>
+  </div>
+</header>
+<main id="main">
+  <section class="hero"><div class="wrap hero__inner"><h1 class="hero__title">テンプレ集</h1><p class="hero__lead">1分で試せる下書きテンプレ。</p></div></section>
+  <section class="section"><div class="wrap grid grid3">
+    <article class="card"><h2>箇条書き→ビジネスメール</h2>
+      <pre class="kbd">宛先：{社名}{役職}{氏名}
+本文の要点：
+・{要点1}
+・{要点2}
+・{要点3}
+トーン：日本の法人向け。依頼・期限・相手のメリットを明確に。
+出力：件名/本文/追伸（任意）。署名は「森合」。</pre>
+      <button class="btn" data-copy>コピー</button>
+    </article>
+    <article class="card"><h2>画像→状況の要点3つ</h2>
+      <pre class="kbd">添付画像を業務観点で解析。
+出力1：状況の推定（確度A/B/C）
+出力2：今すぐできる対処（5分以内）
+出力3：顧客に確認すべき点（3つ）
+前提：私はオフィス機器の保守担当。</pre>
+      <button class="btn" data-copy>コピー</button>
+    </article>
+    <article class="card"><h2>出品文＋相場推定</h2>
+      <pre class="kbd">商品：{型番/状態/付属}
+1) 相場レンジの推定（要因）
+2) 見出し3種
+3) 本文300〜500字（安心材料/活用場面/注意点）
+4) 返品ポリシーの短文化</pre>
+      <button class="btn" data-copy>コピー</button>
+    </article>
+  </div></section>
+</main>
+<footer class="site-foot">
+  <div class="wrap foot__inner">
+    <small>© 業務AIレシピ集</small>
+    <small id="updated"></small>
+  </div>
+</footer>
+<script type="module" src="assets/js/app.js"></script>
+</body></html>
