chore: remove ROI feature and references; drop nav link and page; adjust texts

--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,6 @@
     <nav class="nav">
       <a href="catalog.html">活用カタログ</a>
       <a href="templates.html">テンプレ集</a>
-      <a href="roi.html">ROI計算</a>
       <a href="cases.html">事例</a>
       <a href="blog.html">ブログ</a>
       <a href="faq.html">FAQ</a>
@@ -23,7 +22,7 @@
 <main id="main">
   <section class="hero"><div class="wrap hero__inner">
     <h1 class="hero__title">はじめよう、業務AI</h1>
-    <p class="hero__lead">小さく試し、前提を明確にし、テンプレで再現性を高める。出力は人が点検し、数字（ROI）で振り返る——これが失敗しにくい最短ルートです。今日から一歩、使っていきましょう。</p>
+    <p class="hero__lead">小さく試し、前提を明確にし、テンプレで再現性を高める。出力は人が点検し、数字で振り返る——これが失敗しにくい最短ルートです。今日から一歩、使っていきましょう。</p>
   </div></section>
   <section class="section"><div class="wrap grid grid4">
     <article class="card"><h2>箇条書き→ビジネスメール</h2><p>要点から整った文面に。</p></article>
