--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,6 @@
     <nav class="nav">
       <a href="catalog.html">活用カタログ</a>
       <a href="templates.html">テンプレ集</a>
-      <a href="roi.html">ROI計算</a>
       <a href="cases.html">事例</a>
       <a href="blog.html">ブログ</a>
       <a href="faq.html">FAQ</a>
@@ -28,7 +27,7 @@
     <button class="btn" data-acc aria-expanded="false">品質は担保できる？</button>
     <div class="card" hidden><p>公開前の検収をルール化。テンプレを最新版に。</p></div>
     <button class="btn" data-acc aria-expanded="false">コストは？</button>
-    <div class="card" hidden><p>ROIページでざっくり試算できます。</p></div>
+    <div class="card" hidden><p>ざっくりは「時給 × 短縮時間 × 回数 × 月稼働週」で概算できます。</p></div>
   </div></section>
 </main>
 <footer class="site-foot">
