--- a/catalog.html
+++ b/catalog.html
@@ -1,6 +1,9 @@
 <!doctype html><html lang="ja"><head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>活用カタログ</title><link rel="stylesheet" href="assets/css/base.css"></head><body>
+<title>活用カタログ</title>
+<meta property="og:image" content="img/top.png">
+<meta name="twitter:card" content="summary_large_image">
+<link rel="stylesheet" href="assets/css/base.css"></head><body>
 <a class="skip" href="#main">本文へスキップ</a>
 <header class="site-header">
   <div class="wrap bar">
