--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html><html lang="ja" data-theme="dark"><head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>業務AIレシピ集 | トップ</title>
+<meta property="og:image" content="img/top.png">
+<meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="assets/css/base.css">
 </head><body>
 <a class="skip" href="#main">本文へスキップ</a>
