chore(favicon): add img/favicon.svg and link on all pages

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 <!doctype html><html lang="ja"><head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>ブログ</title>
+<link rel="icon" href="img/favicon.svg" type="image/svg+xml">
 <meta property="og:image" content="img/top.png">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="assets/css/base.css"></head><body>
